--- a/Microsoft.Toolkit.Uwp.SampleApp.Shared/Controls/ExtendedHamburgerMenu.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Shared/Controls/ExtendedHamburgerMenu.xaml
@@ -1,13 +1,17 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.SampleApp.Controls"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:behaviors="using:Microsoft.Toolkit.Uwp.UI.Animations.Behaviors"
     xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
     xmlns:extensions="using:Microsoft.Toolkit.Uwp.UI.Extensions"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
-    xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp">
+    xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp"
+    mc:Ignorable="d">
 
     <Style x:Key="HorizontalHamburgerMenu"
                TargetType="controls:ExtendedHamburgerMenu">
@@ -31,7 +35,7 @@
                             <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
 
-                        <Grid.Resources>
+                        <win:Grid.Resources>
                             <animations:AnimationCollection x:Key="FromRightShowAnimation">
                                 <animations:TranslationAnimation From="100, 0, 0" To="0" Duration="0:0:0.3"></animations:TranslationAnimation>
                                 <animations:OpacityAnimation From="0" To="1" Duration="0:0:0.3"></animations:OpacityAnimation>
@@ -40,7 +44,7 @@
                                 <animations:OpacityAnimation From="1" To="0" Duration="0:0:0.2"></animations:OpacityAnimation>
                                 <animations:TranslationAnimation To="100, 0, 0" From="0" Duration="0:0:0.2"></animations:TranslationAnimation>
                             </animations:AnimationCollection>
-                        </Grid.Resources>
+                        </win:Grid.Resources>
 
                         <ContentPresenter x:Name="ContentPart"
                                               Grid.Row="1"
@@ -49,7 +53,7 @@
 
                         <Grid Grid.Row="1">
 
-                            <Border x:Name="ContentShadow"
+                            <win:Border x:Name="ContentShadow"
                                         Background="{ThemeResource BackingTint}"
                                         Visibility="{Binding Visibility, ElementName=SamplePickerGrid}">
                                 <interactivity:Interaction.Behaviors>
@@ -64,12 +68,12 @@
                                 <animations:Implicit.HideAnimations>
                                     <animations:OpacityAnimation From="1" To="0" Duration="0:0:0.2"></animations:OpacityAnimation>
                                 </animations:Implicit.HideAnimations>
-                            </Border>
+                            </win:Border>
 
                             <Grid x:Name="SamplePickerGrid"
-                                      x:DeferLoadStrategy="Lazy"
                                       Visibility="Collapsed"
                                       VerticalAlignment="Top">
+                                      <!-- UNO TODO x:DeferLoadStrategy="Lazy"-->
                                 <toolkitControls:DropShadowPanel VerticalContentAlignment="Stretch"
                                                                      HorizontalContentAlignment="Stretch"
                                                                      ShadowOpacity="0.7"
@@ -86,10 +90,13 @@
                                               animations:ReorderGridAnimation.Duration="200"
                                               IsItemClickEnabled="True"
                                               ItemContainerStyle="{StaticResource SecondaryHamburgerMenuItemStyle}"
-                                              ItemContainerTransitions="{x:Null}"
                                               ItemTemplate="{StaticResource SampleTemplate}"
                                               SelectionMode="Single"
-                                              Transitions="{x:Null}">
+											  >
+                                              <!--
+										Transitions="{x:Null}"
+                                              ItemContainerTransitions="{x:Null}"
+										-->
                                     <animations:Implicit.ShowAnimations>
                                         <animations:OpacityAnimation From="0" To="1" Duration="0:0:0.3" Delay="0:0:0.2" SetInitialValueBeforeDelay="True"></animations:OpacityAnimation>
                                     </animations:Implicit.ShowAnimations>
@@ -152,16 +159,17 @@
                                            Grid.Column="1"
                                            Margin="2,0,0,0"
                                            VerticalAlignment="Center"
-                                           animations:Implicit.HideAnimations="{StaticResource FromRightHideAnimation}"
-                                           animations:Implicit.ShowAnimations="{StaticResource FromRightShowAnimation}"
                                            FontFamily="Segoe UI"
                                            FontSize="15px"
                                            FontWeight="Normal"
                                            Text="{TemplateBinding Title}" />
+                                           <!--animations:Implicit.HideAnimations="{StaticResource FromRightHideAnimation}"
+                                           animations:Implicit.ShowAnimations="{StaticResource FromRightShowAnimation}"-->
 
                             <Grid Grid.Column="2" x:Name="SearchGrid"
-                                      animations:Implicit.ShowAnimations="{StaticResource FromRightShowAnimation}"
-                                      animations:Implicit.HideAnimations="{StaticResource FromRightHideAnimation}">
+								  >
+                                      <!--animations:Implicit.ShowAnimations="{StaticResource FromRightShowAnimation}"
+                                      animations:Implicit.HideAnimations="{StaticResource FromRightHideAnimation}"-->
                                 <Button Name="SearchButton"
                                             Padding="0"
                                             VerticalAlignment="Stretch"
@@ -261,7 +269,7 @@
                                                                          Color="Black"
                                                                          OffsetY="6"
                                                                          BlurRadius="60">
-                                        <Border Background="{ThemeResource Menu-DropDown-Background}"
+                                        <win:Border Background="{ThemeResource Menu-DropDown-Background}"
                                                     Opacity="0.96">
                                             <interactivity:Interaction.Behaviors>
                                                 <behaviors:Blur AutomaticallyStart="True"
@@ -269,7 +277,7 @@
                                                                     Value="3"
                                                                     Duration="0" />
                                             </interactivity:Interaction.Behaviors>
-                                        </Border>
+                                        </win:Border>
                                     </toolkitControls:DropShadowPanel>
 
                                     <Grid Padding="10">
