--- a/Microsoft.Toolkit.Uwp.SampleApp.Shared/Controls/AadAuthControl.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Shared/Controls/AadAuthControl.xaml
@@ -56,10 +56,10 @@
                     <HyperlinkButton Margin="0,0,0,15"
                                              Content="Show me how to get this ID"
                                              NavigateUri="https://docs.microsoft.com/windows/uwpcommunitytoolkit/services/MicrosoftGraph/"/>
-                    <graph:AadLogin View="EmailOnly"
+                    <!--<graph:AadLogin View="EmailOnly"
                                     AllowSignInAsDifferentUser="False"
                                     IsEnabled="{Binding ElementName=aadAuthControl, Path=IsEnableSignInButton, Mode=OneWay}" 
-                                    Visibility="{Binding ElementName=aadAuthControl, Path=IsShowSignInButton, Mode=OneTime}"/>
+                                    Visibility="{Binding ElementName=aadAuthControl, Path=IsShowSignInButton, Mode=OneTime}"/>-->
                 </StackPanel>
             </Grid>
         </Grid>
