--- a/Microsoft.Toolkit.Uwp.SampleApp.Shared/Controls/ExtendedHamburgerMenu.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Shared/Controls/ExtendedHamburgerMenu.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:xamarin="http://uno.ui/xamarin"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.SampleApp.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,7 +12,7 @@
     xmlns:extensions="using:Microsoft.Toolkit.Uwp.UI.Extensions"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp"
-    mc:Ignorable="d">
+    mc:Ignorable="d xamarin">
 
     <Style x:Key="HorizontalHamburgerMenu"
                TargetType="controls:ExtendedHamburgerMenu">
@@ -150,8 +151,10 @@
                                 </animations:Implicit.Animations>
                                 <ListView.ItemsPanel>
                                     <ItemsPanelTemplate>
-                                        <ItemsStackPanel Orientation="Horizontal" />
-                                    </ItemsPanelTemplate>
+                                        <win:ItemsStackPanel Orientation="Horizontal" />
+										<!-- ItemsStackPanel is not implemented -->
+										<xamarin:StackPanel Orientation="Horizontal" />
+									</ItemsPanelTemplate>
                                 </ListView.ItemsPanel>
                             </ListView>
 
