--- a/Microsoft.Toolkit.Uwp.UI.Controls/ImageCropper/ImageCropper.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/ImageCropper/ImageCropper.xaml
@@ -1,8 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-                    xmlns:extensions="using:Microsoft.Toolkit.Uwp.UI.Extensions">
-    <Style TargetType="controls:ImageCropper">
+                    xmlns:extensions="using:Microsoft.Toolkit.Uwp.UI.Extensions"
+                    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                    mc:Ignorable="d">
+    <win:Style TargetType="controls:ImageCropper">
         <Setter Property="IsTabStop" Value="False" />
         <Setter Property="HorizontalAlignment" Value="Stretch" />
         <Setter Property="HorizontalContentAlignment" Value="Stretch" />
@@ -56,5 +60,5 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-    </Style>
+    </win:Style>
 </ResourceDictionary>
