--- a/Microsoft.Toolkit.Uwp.SampleApp.Shared/SamplePages/RemoteDevicePicker/RemoteDevicePickerControlPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Shared/SamplePages/RemoteDevicePicker/RemoteDevicePickerControlPage.xaml
@@ -14,7 +14,7 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <Button Content="Pick Device(s)" HorizontalAlignment="Center" VerticalAlignment="Center" Tapped="Button_Tapped" Grid.Row="0" Width="{Binding ElementName=MyComboBox, Path=ActualWidth}" />
+            <Button Content="Pick Device(s)" HorizontalAlignment="Center" VerticalAlignment="Center" Tapped="Button_Tapped" Grid.Row="0" Width="200" />
             <CheckBox Content="Show Advanced Filters" Grid.Row="1" x:Name="ShowAdvancedFilters"/>
             <ComboBox x:Name="MyComboBox" Grid.Row="2" MinWidth="200" Header="Selection Mode" />
         </Grid>
