--- a/Microsoft.Toolkit.Uwp.UI.Controls/RemoteDevicePicker/RemoteDevicePicker.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/RemoteDevicePicker/RemoteDevicePicker.xaml
@@ -1,8 +1,12 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:converters="using:Microsoft.Toolkit.Uwp.UI.Converters"
-    xmlns:local="using:Microsoft.Toolkit.Uwp.UI.Controls">
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="using:Microsoft.Toolkit.Uwp.UI.Controls"
+    mc:Ignorable="d">
 
     <converters:RemoteSystemKindToSymbolConverter x:Key="KindToImageConverter" />
 
@@ -113,12 +117,12 @@
                                                 <ComboBox x:Name="AuthorizationType" Margin="10,4" VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="2"/>
                                             </Grid>
                                             <ScrollContentPresenter x:Name="Content"
-                                                FontSize="{ThemeResource ControlContentThemeFontSize}"
-                                                FontFamily="{ThemeResource ContentControlThemeFontFamily}"
+                                                win:FontSize="{ThemeResource ControlContentThemeFontSize}"
+                                                win:FontFamily="{ThemeResource ContentControlThemeFontFamily}"
                                                 Margin="{ThemeResource ContentDialogContentMargin}"
                                                 Foreground="{TemplateBinding Foreground}"
                                                 Grid.Row="3">
-                                                <ContentPresenter.Content>
+                                                <ScrollContentPresenter.Content>
                                                     <ListView x:Name="PART_ListDevices" IsItemClickEnabled="True" IsDoubleTapEnabled="True" IsMultiSelectCheckBoxEnabled="True">
                                                         <ListView.ItemTemplate>
                                                             <DataTemplate>
@@ -140,7 +144,7 @@
                                                             </DataTemplate>
                                                         </ListView.ItemTemplate>
                                                     </ListView>
-                                                </ContentPresenter.Content>
+                                                </ScrollContentPresenter.Content>
                                             </ScrollContentPresenter>
                                         </Grid>
                                     </ScrollViewer>
