Adjust UWP build

--- a/Microsoft.Toolkit.Uwp.SampleApp.Shared/SamplePages/LiveTile/LiveTilePage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Shared/SamplePages/LiveTile/LiveTilePage.xaml
@@ -79,8 +79,8 @@
                     <visualizer:PreviewTile x:Name="LargePreviewTile"
                                         IsAnimationEnabled="False"
                                         TileSize="Large" />
-
-            </StackPanel>
+                </StackPanel>
+            </controls:WrapPanel>
         </StackPanel>
     </ScrollViewer>
 </Page>
