--- a/Microsoft.Toolkit.Uwp.SampleApp.Shared/Controls/XamlCodeEditor.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Shared/Controls/XamlCodeEditor.xaml
@@ -7,7 +7,7 @@
     xmlns:monaco="using:Monaco"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
+    mc:Ignorable="d xamarin"
     d:DesignHeight="300"
     d:DesignWidth="400">
 
