--- a/Microsoft.Toolkit.Uwp.SampleApp.Shared/SamplePages/CameraHelper/CameraHelperPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Shared/SamplePages/CameraHelper/CameraHelperPage.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
     <Page.Resources>
-        <Style x:Name="ErrorMessageStyle" TargetType="TextBlock">
+        <Style x:Key="ErrorMessageStyle" TargetType="TextBlock">
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="Foreground" Value="Firebrick"/>
