--- a/TokenListBoxSample/Controls/TokenListBox/TokenListBox.xaml
+++ b/TokenListBoxSample/Controls/TokenListBox/TokenListBox.xaml
@@ -1,7 +1,11 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+    xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="using:TokenListBoxSample.Controls">
+    xmlns:local="using:TokenListBoxSample.Controls"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d">
 
     <!-- Resources for TokenListBox -->
     <Thickness x:Key="TokenListBoxBorderThickness">2</Thickness>
@@ -15,26 +19,26 @@
     </Style>
 
     <!-- Default style for TokenListBox -->
-    <Style TargetType="controls:TokenListBox">
+    <Style TargetType="local:TokenListBox">
         <Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundBaseHighBrush}" />
         <Setter Property="Background" Value="{ThemeResource SystemControlBackgroundChromeMediumLowBrush}" />
         <Setter Property="BorderBrush" Value="{ThemeResource SystemControlForegroundBaseHighBrush}" />
         <Setter Property="BorderThickness" Value="{StaticResource TokenListBoxBorderThickness}" />
         <Setter Property="Padding" Value="{StaticResource TokenListBoxPadding}" />
         <Setter Property="TokenSpacing" Value="{StaticResource TokenListBoxTokenSpacing}" />
-        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled" />
-        <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
-        <Setter Property="ScrollViewer.HorizontalScrollMode" Value="Disabled" />
-        <Setter Property="ScrollViewer.IsHorizontalRailEnabled" Value="True" />
-        <Setter Property="ScrollViewer.VerticalScrollMode" Value="Enabled" />
-        <Setter Property="ScrollViewer.IsVerticalRailEnabled" Value="True" />
-        <Setter Property="ScrollViewer.ZoomMode" Value="Disabled" />
-        <Setter Property="ScrollViewer.IsDeferredScrollingEnabled" Value="False" />
-        <Setter Property="ScrollViewer.BringIntoViewOnFocusChange" Value="True" />
+        <win:Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled" />
+        <win:Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
+        <win:Setter Property="ScrollViewer.HorizontalScrollMode" Value="Disabled" />
+        <win:Setter Property="ScrollViewer.IsHorizontalRailEnabled" Value="True" />
+        <win:Setter Property="ScrollViewer.VerticalScrollMode" Value="Enabled" />
+        <win:Setter Property="ScrollViewer.IsVerticalRailEnabled" Value="True" />
+        <win:Setter Property="ScrollViewer.ZoomMode" Value="Disabled" />
+        <win:Setter Property="ScrollViewer.IsDeferredScrollingEnabled" Value="False" />
+        <win:Setter Property="ScrollViewer.BringIntoViewOnFocusChange" Value="True" />
         <Setter Property="IsTabStop" Value="False" />
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="controls:TokenListBox">
+                <ControlTemplate TargetType="local:TokenListBox">
                     <Grid 
                         Name="RootPanel"
                         Background="{TemplateBinding Background}"
@@ -54,7 +58,7 @@
                             IsDeferredScrollingEnabled="{TemplateBinding ScrollViewer.IsDeferredScrollingEnabled}"
                             BringIntoViewOnFocusChange="{TemplateBinding ScrollViewer.BringIntoViewOnFocusChange}">
                         
-                            <controls:WrapPanel
+                            <local:WrapPanel
                                 Name="PART_WrapPanel"
                                 StretchLastChild="True"
                                 HorizontalSpacing="{TemplateBinding TokenSpacing}"
@@ -73,7 +77,7 @@
                                     ItemsSource="{TemplateBinding SuggestedItemsSource}"
                                     ItemTemplate="{TemplateBinding SuggestedItemTemplate}"
                                     TextBoxStyle="{StaticResource TokenListBoxTextBoxStyle}" />
-                            </controls:WrapPanel>
+                            </local:WrapPanel>
                         </ScrollViewer>
                     </Grid>
                 </ControlTemplate>
