--- a/Microsoft.Toolkit.Uwp.SampleApp.Shared/Pages/SampleController.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Shared/Pages/SampleController.xaml
@@ -17,7 +17,7 @@
 
     <Grid>
 
-        <Grid x:Name="RootGrid">
+        <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*" />
                 <ColumnDefinition x:Name="SideColumn" />
@@ -169,6 +169,7 @@
                                       Visibility="{x:Bind CanChangePaneState}"
                                       Icon="ClosePane"
                                       Width="50"
+									  Height="50"
                                       Click="{x:Bind ExpandCollapsePane}" />
                     </Pivot.LeftHeader>
 
