--- a/Microsoft.Toolkit.Uwp.SampleApp.Shared/Pages/SampleController.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Shared/Pages/SampleController.xaml
@@ -1,4 +1,4 @@
-<Page
+﻿<Page
     x:Class="Microsoft.Toolkit.Uwp.SampleApp.SampleController"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
@@ -285,7 +285,7 @@
                     <VisualState.Setters>
                         <Setter Target="NarrowInfoButton.Visibility" Value="Visible" />
                         <Setter Target="SampleTitleBar.(Grid.ColumnSpan)" Value="2" />
-                        <Setter Target="InfoAreaPivot.Margin" Value="0,50,0,0" />
+						<Setter Target="InfoAreaGrid.Margin" Value="0,50,0,0" />
 
                         <Setter Target="InfoAreaGrid.(Grid.Column)" Value="0" />
                         <Setter Target="InfoAreaGrid.(Grid.ColumnSpan)" Value="2" />
@@ -311,7 +311,7 @@
                         <Setter Target="ExpandPane.Icon" Value="OpenPane" />
                         <Setter Target="SampleTitleBar.(Grid.ColumnSpan)" Value="1" />
                         <Setter Target="SampleTitleBar.(Grid.Column)" Value="0" />
-                        <Setter Target="InfoAreaPivot.Margin" Value="0,50,0,0" />
+						<Setter Target="InfoAreaGrid.Margin" Value="0,50,0,0" />
 
                         <Setter Target="InfoAreaGrid.(Grid.Column)" Value="0" />
                         <Setter Target="InfoAreaGrid.(Grid.ColumnSpan)" Value="2" />
